third_party/move/tools/move-abigen/tests/sources/bad_script.exp
Abigen returns: exiting with compilation errors
error: invalid argument to `abort`: unsupported type `bool`
  ┌─ tests/sources/bad_script.move:3:15
  │
3 │         abort true  // type error, abort code must be a u64
  │               ^^^^
